force-app/force-app/force-app/main/default/objects/Complaint_Product__c/Complaint_Product__c.object-meta.xml
<CustomObject>
    <label>Complaint Product</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Complaint Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>