force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Average_load_carried__c.field-meta.xml
<CustomField>
    <fullName>Average_load_carried__c</fullName>
    <label>Average load carried</label>
    <length>100</length>
    <type>Text</type>
</CustomField>