force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Average_speed__c.field-meta.xml
<CustomField>
    <fullName>Average_speed__c</fullName>
    <label>Average speed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>