force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Complaints_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Complaints_Tracker__c</fullName>
    <label>Complaints Tracker</label>
    <referenceTo>Complaints_Tracker__c</referenceTo>
    <relationshipLabel>Complaint Products</relationshipLabel>
    <relationshipName>Complaint_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>