force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Equipment_Damage_Status__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Damage_Status__c</fullName>
    <label>Equipment Damage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Nil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>