force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Failed_Tyre_Position__c.field-meta.xml
<CustomField>
    <fullName>Failed_Tyre_Position__c</fullName>
    <label>Failed Tyre Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLO</fullName>
            </value>
            <value>
                <fullName>FLI</fullName>
            </value>
            <value>
                <fullName>FRO</fullName>
            </value>
            <value>
                <fullName>FRI</fullName>
            </value>
            <value>
                <fullName>RLO</fullName>
            </value>
            <value>
                <fullName>RLI</fullName>
            </value>
            <value>
                <fullName>RRO</fullName>
            </value>
            <value>
                <fullName>RRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>