force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Heat_spot_on_equipment_Motor_Wheel_Conn__c.field-meta.xml
<CustomField>
    <fullName>Heat_spot_on_equipment_Motor_Wheel_Conn__c</fullName>
    <label>Heat spot on equipment/Motor/Wheel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Nil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>