force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/ID_intact_Spinning_Slippage_status__c.field-meta.xml
<CustomField>
    <fullName>ID_intact_Spinning_Slippage_status__c</fullName>
    <label>ID intact/Spinning/Slippage status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Nil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>