force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Lip_Reg__c.field-meta.xml
<CustomField>
    <fullName>Lip_Reg__c</fullName>
    <formula>TEXT(Product__r.Lip__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lip/Reg</label>
    <type>Text</type>
</CustomField>