force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Max_Distance_Covered_At_A_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Max_Distance_Covered_At_A_Stretch__c</fullName>
    <label>Max Distance Covered At A Stretch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>