force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Motive_power__c.field-meta.xml
<CustomField>
    <fullName>Motive_power__c</fullName>
    <label>Motive power</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesle</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>