force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/No_of_Shifts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Shifts__c</fullName>
    <label>No of Shifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>