force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Product_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_SAP_Code__c</fullName>
    <label>Product SAP Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>