force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Remarks_1__c.field-meta.xml
<CustomField>
    <fullName>Remarks_1__c</fullName>
    <label>Remarks -1</label>
    <type>TextArea</type>
</CustomField>