force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Sidewall_outer_Status_Damage__c.field-meta.xml
<CustomField>
    <fullName>Sidewall_outer_Status_Damage__c</fullName>
    <label>Sidewall outer Status -Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Nil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>