force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Stencil_No__c.field-meta.xml
<CustomField>
    <fullName>Stencil_No__c</fullName>
    <label>Stencil No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>