force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Surface_Condition__c.field-meta.xml
<CustomField>
    <fullName>Surface_Condition__c</fullName>
    <label>Surface Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>