force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Surface_type_texture__c.field-meta.xml
<CustomField>
    <fullName>Surface_type_texture__c</fullName>
    <label>Surface type/ texture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarmac</fullName>
            </value>
            <value>
                <fullName>Epoxy</fullName>
            </value>
            <value>
                <fullName>Shopfloor</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Rough</fullName>
            </value>
            <value>
                <fullName>Ribbed</fullName>
            </value>
            <value>
                <fullName>Unlaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>