force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Tread_Wear_Status__c.field-meta.xml
<CustomField>
    <fullName>Tread_Wear_Status__c</fullName>
    <label>Tread Wear Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Even</fullName>
            </value>
            <value>
                <fullName>Taper</fullName>
            </value>
            <value>
                <fullName>Wavy</fullName>
            </value>
            <value>
                <fullName>HTW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>