force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/TWA_Tyre_NA__c.field-meta.xml
<CustomField>
    <fullName>TWA_Tyre_NA__c</fullName>
    <formula>TEXT( Product__r.Tyre_TWA_THA__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TWA/Tyre/NA</label>
    <type>Text</type>
</CustomField>