force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Usage_area__c.field-meta.xml
<CustomField>
    <fullName>Usage_area__c</fullName>
    <label>Usage area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outside</fullName>
            </value>
            <value>
                <fullName>Inside</fullName>
            </value>
            <value>
                <fullName>IO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>