force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Usage_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Usage_Hours_Per_Day__c</fullName>
    <label>Usage Hours Per Day</label>
    <length>100</length>
    <type>Text</type>
</CustomField>