force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Usage_hours_per_shift__c.field-meta.xml
<CustomField>
    <fullName>Usage_hours_per_shift__c</fullName>
    <label>Usage hours per shift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>