force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Warranty_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Assessment__c</fullName>
    <label>Warranty Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warrantable</fullName>
            </value>
            <value>
                <fullName>Non Warrantable</fullName>
            </value>
            <value>
                <fullName>Indecisive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>