force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Wheel_rim_damage_status__c.field-meta.xml
<CustomField>
    <fullName>Wheel_rim_damage_status__c</fullName>
    <label>Wheel rim damage status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Nil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>