force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Work_place_Ambient_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Work_place_Ambient_Temperature__c</fullName>
    <label>Work place Ambient Temperature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>