force-app/force-app/force-app/main/default/objects/Complaint_Product__c/fields/Work_place_hazards_if_any__c.field-meta.xml
<CustomField>
    <fullName>Work_place_hazards_if_any__c</fullName>
    <label>Work place hazards if any</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rails</fullName>
            </value>
            <value>
                <fullName>Metal Ramp</fullName>
            </value>
            <value>
                <fullName>Littered Floor</fullName>
            </value>
            <value>
                <fullName>Metal Scrap</fullName>
            </value>
            <value>
                <fullName>Etc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>